--- a/index.html
+++ b/index.html
@@ -36,9 +36,29 @@
     </style>
   </head>
   <body>
-    Build The Community Your Fans Will Love Huddle re-imagines the way we build
-    communities. You have a voice, but so does your audience. Create connections
-    with your users as you engage in genuine discussion. Register
+    <main class="container">
+      <header class="header">
+        <img class="header__logo" src="./images/logo.svg" alt="logo" />
+      </header>
+
+      <section class="hero">
+        <figure>
+          <img
+            src="./images/illustration-mockups.svg"
+            alt="illustration-mockups"
+          />
+        </figure>
+        <div class="text">
+          <h1>Build The Community Your Fans Will Love</h1>
+          <p>
+            Huddle re-imagines the way we build communities. You have a voice,
+            but so does your audience. Create connections with your users as you
+            engage in genuine discussion.
+          </p>
+          <a href="#" class="button">Register</a>
+        </div>
+      </section>
+    </main>
 
     <footer>
       <p class="attribution">
