--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+      integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="./scss/style.css" />
     <title>
       Frontend Mentor | Huddle landing page with single introductory section
@@ -58,6 +64,18 @@
           <a href="#" class="button">Register</a>
         </div>
       </section>
+
+      <footer class="footer">
+        <a href="#">
+          <i class="fab fa-facebook-f"></i>
+        </a>
+        <a href="#">
+          <i class="fab fa-twitter"></i>
+        </a>
+        <a href="#">
+          <i class="fab fa-instagram"></i>
+        </a>
+      </footer>
     </main>
 
     <footer>
