--- a/index.html
+++ b/index.html
@@ -33,11 +33,13 @@
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
     <style>
       .attribution {
-        font-size: 11px;
+        font-size: 18px;
         text-align: center;
+        color: black;
       }
       .attribution a {
         color: hsl(228, 45%, 44%);
+        color: orangered;
       }
     </style>
   </head>
@@ -83,7 +85,7 @@
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="#">Your Name Here</a>.
+        >. Coded by <a href="#">Vishvas Choudhary</a>.
       </p>
     </footer>
   </body>
